updated index.html as per my model

--- a/app/view/index.html
+++ b/app/view/index.html
@@ -7,11 +7,9 @@
 <body>
 <div>
     <div class='center'>
-        <div class='title'>Classify Bear Images 🐻</div>
+        <div class='title'>Find if the given image is Anime or Cartoon</div>
         <p>
-            Use images of <strong>teddy</strong> bears, <strong>black</strong> bears, <strong>grizzly</strong> bears, or
-            all three!
-        </p>
+            Use images of <strong>Anime</strong> or <strong>Cartoon</strong></p>
         <div class='content'>
             <div class='no-display'>
                 <input id='file-input'
